# individual_task

./: .gitignore  README.md  database.py  main.py  pyproject.toml  settings.py
backend/: .gitignore  database.py  main.py  pyproject.toml  requirements.txt  settings.py
backend/admin/: router.py  services.py
backend/orders/: models.py  router.py  services.py  test_orders.py
backend/products/: models.py  router.py  test_products.py
backend/users/: auth.py  models.py  router.py  services.py  test_users.py
frontend/: .prettierrc  next.config.js  package.json  pnpm-lock.yaml
frontend/src/: routes.ts
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/components/hocs/: withRoles.tsx
frontend/src/components/orders/: OrderItem.tsx  OrderList.tsx
frontend/src/components/products/: ProductItem.tsx  ProductList.tsx  Products.module.scss
frontend/src/hooks/: useActions.ts  useAuth.ts  useTypedSelector.ts
frontend/src/interfaces/: order.interface.ts  product.interface.ts  user.interface.ts
frontend/src/services/: product.service.ts  user.service.ts
frontend/src/store/: index.ts  root-action.ts  root-reducer.ts
frontend/src/store/api/: admin.tools.api.ts  (+3 more)
frontend/src/utils/: localStorage.ts  typing.ts
orders/: models.py  router.py
products/: models.py  router.py  services.py  test_products.py
users/: models.py  router.py  services.py  test_users.py
(+29 files in other folders)
